<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FreeGallery</string>
    <string name="drawer_subtitle">free your memories</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_license_text">License</string>
    <string name="collectionSelection"></string>
    <string name="timelineName">Timeline</string>
    <string name="drawerHome">Home</string>
    <string name="trashName">Trash</string>
    <string name="tagLetter">#</string>
    <string name="tagLetterMenu">   #   </string>
    <string name="openDrawer" tools:keep="@string/openDrawer">open</string>
    <string name="buttonOpenLicenseTexts">Show full licenses for all libraries</string>
    <string name="noWritePermissionToast">No write permission, no edit.</string>
    <string name="noReadPermissionToast">No read permission, no gallery :(</string>
    <string name="hidden">Hidden</string>
    <string name="app_intro">Welcome to FG</string>

    <!-- Intro -->
    <string name="intro_hello_title">Hi</string>
    <string name="intro_hello_description">Welcom to FreeGallery.\n A simple, no-fuzz, no-spy, no-ads gallery app. The next slides will show you the few core features.\nI hope you enjoy it.</string>
    <string name="intro_tags_title">Tags</string>
    <string name="intro_tags_description">Tag your pictures.\nNever lose a funny image of your drunken friend in the depths of your phone again.</string>
    <string name="intro_timeline_title">Timeline</string>
    <string name="intro_timeline_description">The timeline is always there.\nIt contains all your pictures such as photos, downloads all the others. Stop searching for folders.</string>
    <string name="intro_colors_title">Colors</string>
    <string name="intro_colors_description">Assign colors to tags and folders to make them easier to find.</string>
    <string name="intro_permissions_title">I need to access your phones storage.</string>
    <string name="intro_permissions_description">This is necessary to access your pictures. Without it I\'m useless.</string>

    <!-- About -->
    <string name="aboutLibs">Libraries</string>

    <!-- Edit -->
    <string name="editToolbarText">Edit</string>
    <string name="rotateRight">Rotate Right</string>
    <string name="save">Save</string>
    <string name="flipHorizontal">Flip Horizontal</string>
    <string name="flipVertical">Flip Vertical</string>
    <string name="saveCompleteToast">Saved. Good edit, you are great!</string>

    <!-- Temp -->
    <string name="tempDisplayName">Libraries</string>

    <!-- Menus -->
    <string name="setaswhat">What?</string>
    <string name="share">Share</string>
    <string name="shareinsult">Share…</string>
    <string name="delete">Delete</string>
    <string name="untag">Untag</string>
    <string name="emptyTrash">Empty Trash</string>
    <string name="restoreFromTrash">Restore</string>
    <string name="setas">Set as …</string>
    <string name="edit">Edit</string>
    <string name="deleteSnaketag">Delete tag</string>
    <string name="sort">Sort</string>
    <string name="sortByDateAsc">Oldest first</string>
    <string name="sortByDateDesc">Newest first</string>
    <string name="actionColorizeGroup">Colorize</string>
    <string name="actionRemoveColor">Uncolor</string>
    <string name="actionHideGroup">Hide</string>
    <string name="actionUnHideGroup">Unhide</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_zoom">Zoom</string>
    <string name="menu_zoom_in">Zoom +</string>
    <string name="menu_zoom_out">Zoom -</string>
    <string name="menu_show_hidden">Show hidden</string>
    <string name="menu_select_all">Select All</string>
    <string name="rot90">Rotate 90</string>

    <!-- Dialogs -->
    <!-- Image Property Dialog -->
    <string name="ImgPropertyHeadline">Properties</string>
    <string name="ImgPropertyFileName">Name</string>
    <string name="ImgPropertyPath">Path</string>
    <string name="ImgPropertyTags">Tags</string>
    <string name="ImgPropertySize">Size</string>
    <string name="ImgPropertyDateAdded">Date Added</string>
    <string name="ImgPropertyLatitude">Latitude</string>
    <string name="ImgPropertyLongitude">Longitude</string>
    <string name="ImgPropertyDimens">Dimensions</string>
    <string name="ImgPropertyDone">Affirmative!</string>
    <string name="ImgPropertyExifHeadline">Exif Data</string>
    <string name="ImgPropertyCamera">Camera</string>
    <string name="ImgPropertyISO">ISO</string>
    <string name="ImgPropertyExpTime">Exposure Time</string>
    <!-- Snaketag Dialog -->
    <string name="SnaketagOk">Tag</string>
    <string name="SnaketagCancel">Cancel</string>
    <string name="SnaketagTxt">Tag</string>
    <!-- Colorize Dialog -->
    <string name="ColorizeOk">Color!</string>
    <string name="ColorizeCancel">Cancel</string>
    <!-- Deletion Dialog -->

    <!-- Empty trash Dialog -->
    <string name="EmtyTrashQuestion">Permanently delete all items in trash?</string>
    <string name="EmtpyTrashOk">Sure thing</string>
    <string name="EmptyTrashCancel">Nooo!</string>
    <!-- Snackbars -->
    <string name="DeleteSnackbarSingleInfo">Deleted Item</string>
    <string name="DeleteSnackbarUndo">Undo</string>
    <!-- Toasts -->
    <string name="SetVideoAsMakesNoSense">Setting video as …? Makes no sense.</string>
    <string name="TrashingStarted">Moving to trash ...</string>


    <!-- Preferences -->
    <!-- Categories -->
    <string name="prefCategoryVisual">Visuals</string>
    <string name="prefCategoryBehave">Behaviour</string>
    <string name="prefLicense">About</string>
    <string name="prefAccentColor">Accent Color</string>
    <string name="prefUseBlack">Give me the the full darkness</string>
    <string name="prefStyleTitlebarcolorTitle">Colored title bars</string>
    <string name="prefStyleHideDrawerHeader">Hide the bird</string>
    <string name="prefStyleImageBackgroundColor">Colored image backgrounds</string>

    <!-- Color -->
    <string name="prefStyleColorTitle">Theme</string>
    <string name="prefStyleColorDialogTitle">Choose a color</string>
    <string-array name="prefStyleColors">
        <item>Nerd</item>
        <item>Classic</item>
    </string-array>
    <string name="prefStyleColorDefault">prefValueColorClassic</string>
    <string-array name="prefStyleColorValues">
        <item>prefValueColorNerd</item>
        <item>prefValueColorClassic</item>
    </string-array>

    <!-- Order By -->
    <string name="prefUseExifOrientation">Use Exif data for rotation</string>

    <string name="prefOrderBy">Order Items by</string>
    <string name="prefOrderByDialogTitle">By</string>
    <string-array name="prefOrderByEntries">
        <item>Date added</item>
        <item>Date taken</item>
    </string-array>
    <string name="prefOrderByDefault">Date added</string>

    <string name="prefShowIntro">Show intro on next app start</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_intro">IntroActivity</string>


</resources>
