<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_trash_emptyTrash"
        android:orderInCategory="100"
        android:title="@string/emptyTrash"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_trash_collectionSort"
        android:icon="@drawable/ic_sort_white_24dp"
        android:orderInCategory="100"
        android:title="@string/sort"
        android:visible="true"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_trash_collectionSortDesc"
                android:orderInCategory="10"
                android:title="@string/sortByDateDesc"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_trash_collectionSortAsc"
                android:orderInCategory="20"
                android:title="@string/sortByDateAsc"
                app:showAsAction="never" />
        </menu>
    </item>

    <item
        android:id="@+id/menu_collectionZoomView"
        android:icon="@drawable/ic_zoom_in_white_24dp"
        android:orderInCategory="200"
        android:title="@string/menu_zoom"
        android:visible="true"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_collectionZoomViewIn"
                android:orderInCategory="10"
                android:title="@string/menu_zoom_in"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_collectionZoomViewOut"
                android:orderInCategory="20"
                android:title="@string/menu_zoom_out"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>
