<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_save"
        android:orderInCategory="100"
        android:icon="@drawable/ic_save_white_24dp"
        android:title="@string/save"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_rotRight"
        android:orderInCategory="120"
        android:icon="@drawable/ic_rotate_right_white_24dp"
        android:title="@string/rotateRight"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_flipHorizontal"
        android:orderInCategory="130"
        android:icon="@drawable/ic_flip_white_24dp"
        android:title="@string/flipHorizontal"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_flipVertical"
        android:orderInCategory="140"
        android:icon="@drawable/ic_flip_white_24dp"
        android:title="@string/flipVertical"
        android:visible="true"
        app:showAsAction="ifRoom" />

</menu>
