<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/multiimageselection_menu_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:orderInCategory="100"
        android:title="@string/share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/multiimageselection_menu_untag"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="150"
        android:title="@string/untag"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/multiimageselection_menu_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="200"
        android:title="@string/delete"
        app:showAsAction="never" />
</menu>
