<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/overviewselection_menu_colorizegroup"
        android:orderInCategory="200"
        android:title="@string/actionColorizeGroup"
        android:icon="@drawable/ic_colorize_white_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/overviewselection_menu_hidegroup"
        android:orderInCategory="200"
        android:title="@string/actionHideGroup"
        android:icon="@drawable/ic_visibility_off_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/overviewselection_menu_unhidegroup"
        android:orderInCategory="300"
        android:title="@string/actionUnHideGroup"
        android:icon="@drawable/ic_visibility_white_24dp"
        app:showAsAction="ifRoom" />
</menu>
