<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">


    <TextView
        android:id="@+id/imgproperty_txtHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="@string/ImgPropertyHeadline"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:text="@string/ImgPropertyTags"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/imgproperty_txtTags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:text="@string/ImgPropertyFileName"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/imgproperty_txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:text="@string/ImgPropertyPath"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/imgproperty_txtPath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:text="@string/ImgPropertySize"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/imgproperty_txtSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:text="@string/ImgPropertyDimens"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/imgproperty_txtDimensions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:text="@string/ImgPropertyDateAdded"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/imgproperty_txtDateAdded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:text="@string/ImgPropertyLatitude"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/imgproperty_txtLatitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:text="@string/ImgPropertyLongitude"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/imgproperty_txtLongitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
