<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_key_style_settings"
        android:title="@string/prefCategoryVisual">
<!--
        <ListPreference
            android:defaultValue="@string/prefStyleColorDefault"
            android:dialogTitle="@string/prefStyleColorDialogTitle"
            android:entries="@array/prefStyleColors"
            android:entryValues="@array/prefStyleColorValues"
            android:key="pref_key_style_color"
            android:title="@string/prefStyleColorTitle" />

        <com.labs.pbrother.freegallery.settings.ColorPickerPreference
            android:defaultValue="64"
            android:key="pref_key_style_custcolor"
            android:title="@string/prefAccentColor"

            />
-->

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_style_colorize_title"
            android:title="@string/prefStyleTitlebarcolorTitle" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_style_hide_drawer_header"
            android:title="@string/prefStyleHideDrawerHeader" />

    </PreferenceCategory>
</PreferenceScreen>
